# src/main/java/com/taskvault/app/controller/CommentController.java
@@ -1,0 +1,42 @@
+package com.taskvault.app.controller;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RestController;
+
+import com.taskvault.app.error.TaskNotFoundException;
+import com.taskvault.app.payload.request.CommentRequest;
+import com.taskvault.app.payload.response.CommentResponse;
+import com.taskvault.app.service.CommentService;
+
+/** Controller do endpoint de gerenciamento de comentários */
+@RestController
+@RequestMapping("/task/{taskId}/comment")
+public class CommentController {
+
+    /** Serviço de gerenciamento de comentários */
+    @Autowired
+    private CommentService commentService;
+
+    /**
+     *  Cria novo comentário em tarefa
+     * @param taskId ID da tarefa comentada
+     * @param comment Dados da requisição de criação de comentário
+     * @return Comentário criado
+     * @throws TaskNotFoundException
+     */
+    @PostMapping
+    @ResponseStatus(code = HttpStatus.CREATED)
+    public CommentResponse createComment(
+        @PathVariable long taskId,
+        @RequestBody CommentRequest comment
+    ) throws TaskNotFoundException {
+        return CommentResponse.from(commentService.createComment(comment, taskId));
+    }
+
+}
